# fiddle

./: .clangd  .gitignore  CMakeLists.txt  Fiddle Expression Map.csv  IInfoListener.md  fiddle.sh  ftest  presets.xml  rebuild_all.sh  test_context.sh  test_load_config.py
.agent/workflows/: ui-development.md
.sandbox/tmp/node-compile-cache/v25.5.0-arm64-392347a2-501/: 006b9eef  00e731c6  00ed083b  011ca292  014043ef  01510154  0177176c  01a1332b  01c1b121  01feb49e  0206db90  0243131b  02d33faf  03198dd5  0392b459  03fcad17  05abfb5a  05c4be7f  05ddacc0  06114afe  078135f8  07928bc5  07b4cb70  084dce94  08a045f5  08a37134  0966d2da  09b7f578  0a410974  0a607400  0ad7575a  0bbdcabb  0c9efa75  0d9e2127  0df33c55  0e35199c  0ef54dbe  101a2303  108e6cdc  119358c1  (+557 more)
.tmp/node-compile-cache/v25.5.0-arm64-392347a2-501/: 006b9eef  00e731c6  00ed083b  011ca292  014043ef  01510154  0177176c  01a1332b  01c1b121  01feb49e  0206db90  0243131b  02d33faf  03198dd5  0392b459  03fcad17  05abfb5a  05c4be7f  05ddacc0  06114afe  078135f8  07928bc5  07b4cb70  084dce94  08a045f5  08a37134  0966d2da  09b7f578  0a410974  0a607400  0ad7575a  0bbdcabb  0c9efa75  0d9e2127  0df33c55  0e35199c  0ef54dbe  101a2303  108e6cdc  119358c1  (+557 more)
Source/: AudioSharedMemory.h  InstrumentNames.h  MidiTcpRelay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Vst3Extensions.h  midi_event.proto  test_load.cpp
Source/NativePlugin/: AudioConsumer.h  FiddleCIDs.h  FiddleController.cpp  FiddleController.h  FiddleFactory.cpp  FiddlePlugView.h  FiddlePlugView.mm  FiddleProcessor.cpp  FiddleProcessor.h  FiddleVersion.h  Info.plist.in  TcpRelay.cpp  TcpRelay.h  moduleinfo.json
Source/Pilot/: Main.cpp  MainComponent.cpp  MainComponent.h  MidiPlayer.h  PluginHost.h
Source/Server/: ConfigChooserWindow.h  DoricoConfigGenerator.cpp  DoricoConfigGenerator.h  DoricoInstrumentBrowser.cpp  DoricoInstrumentBrowser.h  DoricoInstruments.h  DoricoSetupComponent.cpp  DoricoSetupComponent.h  ExpressionMap.h  FiddleConfig.h  InstrumentMapper.h  Main.cpp  MainComponent.cpp  MainComponent.h  MasterInstrumentList.cpp  MasterInstrumentList.h  MidiTcpServer.cpp  MidiTcpServer.h  MixerModel.h  MixerStrip.h  NoteStreamTracker.h  PluginEditorWindow.h  PluginHost.h  PluginScanner.h  ScriptBindings.cpp  ScriptBindings.h  ScriptEngine.cpp  ScriptEngine.h  SubnoteGenerator.h
Source/Server/ui/: .npmrc  index.html  jsconfig.json  package.json  pnpm-lock.yaml  svelte.config.js
Source/Server/ui/.tmp/node-compile-cache/v25.5.0-arm64-392347a2-501/: 006b9eef  00e731c6  00ed083b  011ca292  014043ef  01510154  0177176c  01a1332b  01c1b121  01feb49e  0206db90  0243131b  02d33faf  03198dd5  0392b459  03fcad17  05abfb5a  05c4be7f  05ddacc0  06114afe  078135f8  07928bc5  07b4cb70  084dce94  08a045f5  08a37134  0966d2da  09b7f578  0a410974  0a607400  0ad7575a  0bbdcabb  0c9efa75  0d9e2127  0df33c55  0e35199c  0ef54dbe  101a2303  108e6cdc  119358c1  (+557 more)
Source/Server/ui/src/: App.svelte  app.css  app.d.ts
Source/Server/ui/src/lib/: ActiveNotes.svelte  EventLog.svelte  InstrumentList.svelte  LogPanel.svelte  MixerPanel.svelte  PluginsPanel.svelte  SetupPanel.svelte  Timeline.svelte  orchestralOrder.js
build_check/: midi_event.pb.cc  midi_event.pb.h
docs/: Dorico automatic intrument assignment.md  Interpreting Expression Maps.md  Note classification.md  Setup goal.md  Setup.md  Support multiple configs.md  VST host.md  design_summary.md  test_tcp_server.py
resources/: Fiddle_Universal.doricolib
scripts/: bump_version.sh  default_fiddle.as
